--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "videoapp",
   "version": "1.0.0",
-  "description": "",
+  "description": "A backend video app project",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "author": "Kamlesh Kumar",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  }
 }
