--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Kamlesh Kumar",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "prettier": "^3.2.5"
   }
 }
